<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mygeniusgastroproyec.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.mygeniusgastroproyec.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.mygeniusgastroproyec.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_agregar"
        android:name="com.example.mygeniusgastroproyec.ui.receta.AgregarFragment"
        android:label="@string/menu_agregar"
        tools:layout="@layout/fragment_agregar" />


</navigation>
