<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mygeniusgastroproyec.ui.perfil.PerfilFragment"
    android:background="@color/mediumgray">


    <ImageView
        android:id="@+id/imagePerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/perfil"
        app:layout_constraintBottom_toTopOf="@+id/editNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editNombre"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/nombre_de_usuario"
        android:textSize="18sp"
        android:textStyle="bold"
        android:focusable="true"
        android:clickable="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/nombre_de_usuario"
        app:layout_constraintTop_toBottomOf="@id/imagePerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/usuario_example_com"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        android:importantForAccessibility="yes"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:focusable="true"
        android:clickable="true"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/editNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp" />

    <EditText
        android:id="@+id/editDescripcion"
        android:layout_width="357dp"
        android:layout_height="191dp"
        android:layout_marginTop="16dp"
        android:autofillHints="28dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/aqu_puedes_poner_una_breve_descripci_n_del_perfil"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />


    <Button
        android:id="@+id/buttonEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescripcion"
        app:layout_constraintVertical_bias="0.246" />
</androidx.constraintlayout.widget.ConstraintLayout>
